--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,7 +1,16 @@
 .container {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+h1 {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 140%;
+    color: #FFFFFF;
+
 }
 
 .btn {
@@ -14,5 +23,14 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 130%;
+    color: #1D92FF;
+}
+
+.sub-title {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0.05em;
     color: #1D92FF;
 }
