--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,7 +3,7 @@ body.active {
 }
 
 header {
-    padding: 50px 0;
+    padding: 50px 0 0 0;
     background: #002547;
     color: #fefefe;
 
@@ -126,6 +126,7 @@ header {
                 transition: all 0.3s ease 0s;
                 overflow: auto;
                 background-color: rgba(0, 0, 0, 0.8);
+                z-index: 6;
 
                 .menu {
                     display: flex;
@@ -136,7 +137,6 @@ header {
                     }
                 }
             }
-
         }
     }
 }
