--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -24,6 +24,15 @@ h2 {
     }
 }
 
+h3 {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 150%;
+    text-transform: capitalize;
+    color: #000000;
+}
+
 .btn {
     display: inline-block;
     padding: 15px 30px;
