--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@
 @import "_partners";
 @import "_slogan";
 @import "_stats";
+@import "_advantages";
+
 
 body {
     background: rgb(252, 252, 252);
