--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,8 @@
 @import "_slogan";
 @import "_stats";
 @import "_advantages";
-
+@import "_offers";
+@import "_form";
 
 body {
     background: rgb(252, 252, 252);
