--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -4,13 +4,15 @@
         justify-content: space-between;
         align-items: center;
         background-image: url("/img/form-bg.png");
+        background-repeat: no-repeat;
         background-color: #002648;
-        border-radius: 10px;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
         padding: 50px 60px;
 
         .form-info {
-            max-width: 500px;
-            color: #fefe;
+            max-width: 550px;
+            color: rgb(255, 255, 255);
 
             .title {
                 font-size: 36px;
@@ -75,6 +77,7 @@
     .form {
         &__content {
             padding: 40px 20px;
+            background-position: center;
 
             .form-input {
                 position: relative;
