--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -35,6 +35,11 @@ header {
                 font-size: 16px;
                 line-height: 130%;
                 color: rgba(255, 255, 255, 0.6);
+                transition: all 0.3s ease;
+            }
+
+            a:hover {
+                color: rgba(255, 255, 255);
             }
 
             a.active {
