--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -61,3 +61,15 @@ h3 {
     color: #1D92FF;
     text-transform: uppercase;
 }
+
+@media (max-width:325px) {
+    h1 {
+        font-size: 40px;
+        line-height: 140%;
+    }
+
+    h2 {
+        font-size: 34px;
+        line-height: 135%;
+    }
+}
